--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,10 @@ get = {0} fetched successfully
 get.all = {0} list fetched successfully
 get.mix = {0} and {1} sets Fetched successfully
 
+## exception message
+error.already.exist=Already Exists
+
 ##module Name
 categories=Category
 student=Student
+name=Name
